[package]
name = "piston-examples"
version = "0.0.0"
edition = "2018"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = []

[dependencies]
piston = "1.0.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.85.0"
piston_window = "0.132.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.33.0"
piston2d-sprite = "0.68.0"
image = "0.25.1"
piston2d-drag_controller = "0.30.0"
piston2d-deform_grid = "0.14.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.34.0"
rand = "0.8.5"
shader_version = "0.7.0"
