[package]

name = "deform"
version = "0.0.1"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]

[[bin]]

name = "piston-examples-deform"
path = "src/main.rs"

[dependencies.pistoncore-sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.pistoncore-event]

git = "https://github.com/pistondevelopers/event"

[dependencies.piston2d-opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston2d-drag_controller]

git = "https://github.com/PistonDevelopers/drag_controller.git"

