[package]

name = "deform"
version = "0.0.1"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]

[[bin]]

name = "piston-examples-deform"
path = "src/main.rs"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston2d-drag_controller]
git = "https://github.com/pistondevelopers/drag_controller"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

