[package]
name = "piston-examples-deform"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = []

[[bin]]
name = "piston-examples-deform"
path = "src/main.rs"

[dependencies]
piston = "0.1.4"
piston2d-graphics = "0.1.4"
piston2d-opengl_graphics = "0.1.0"
piston2d-drag_controller = "0.1.0"
pistoncore-sdl2_window = "0.1.0"
