[package]
name = "piston-example-freetype"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = []

[[bin]]
name = "piston-example-freetype"
path = "src/main.rs"

[dependencies]
piston = "0.48.0"
piston2d-opengl_graphics = "0.65.0"
piston2d-graphics = "0.32.0"
pistoncore-sdl2_window = "0.62.0"
freetype-rs = "0.20.0"
find_folder = "0.3.0"
