[package]
name = "cube"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
tags = []

[[bin]]
name = "cube"
path = "src/main.rs"

[dependencies.pistoncore-event]
git = "https://github.com/PistonDevelopers/event"

[dependencies.pistoncore-window]
git = "https://github.com/PistonDevelopers/window"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.pistoncore-input]
git = "https://github.com/PistonDevelopers/input"

[dependencies.piston3d-cam]
git = "https://github.com/PistonDevelopers/cam"

[dependencies.quack]
git = "https://github.com/PistonDevelopers/quack"

[dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx-rs"
