[package]
name = "piston-example-cube"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
keywords = []

[[bin]]
name = "piston-example-cube"
path = "src/main.rs"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.camera_controllers]
git = "https://github.com/PistonDevelopers/camera_controllers"

[dependencies.shader_version]
git = "https://github.com/PistonDevelopers/shader_version"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"

[dependencies.sdl2]
#git = "https://github.com/AngryLawyer/rust-sdl2"
git = "https://github.com/PistonDevelopers/rust-sdl2"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros"
