[package]
name = "piston-example-gfx_graphics_examples"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
keywords = []

[[bin]]
name = "piston-example-gfx_graphics-draw_state_test"
path = "src/draw_state_test.rs"

[[bin]]
name = "piston-example-gfx_graphics-image_test"
path = "src/image_test.rs"

[[bin]]
name = "piston-example-gfx_graphics-text_test"
path = "src/text_test.rs"


[dependencies]
freetype-rs = "0.0.10"
gfx = "0.6.*"
piston-shaders_graphics2d = "0.0.0"
piston-gfx_texture = "0.0.7"
piston2d-graphics = "0.0.48"
pistoncore-glutin_window = "0.0.9"
gfx_device_gl = "0.4.*"
piston_window = "0.0.7"
piston = "0.1.3"
piston2d-gfx_graphics = "0.1.20"

