[package]
name = "piston-example-gfx_graphics_examples"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
keywords = []

[[bin]]
name = "draw_state_test"
path = "src/draw_state_test.rs"

[[bin]]
name = "image_test"
path = "src/image_test.rs"

[[bin]]
name = "text_test"
path = "src/text_test.rs"


[dependencies]
freetype-rs = "0.1.0"
gfx = "0.6.1"
piston-shaders_graphics2d = "0.1.0"
piston-gfx_texture = "0.1.0"
piston2d-graphics = "0.1.3"
pistoncore-glutin_window = "0.1.0"
gfx_device_gl = "0.4.0"
piston_window = "0.1.0"
piston = "0.1.4"
piston2d-gfx_graphics = "0.1.22"

