[package]

name = "piston-example-hgl_triangle"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
tags = []

[[bin]]

name = "piston-example-hgl_triangle"
path = "src/main.rs"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston/"

[dependencies.hgl]

git = "https://github.com/cmr/hgl-rs/"

[dependencies.gl]

git = "https://github.com/bjz/gl-rs"

[dependencies.sdl2_game_window]

git = "https://github.com/PistonDevelopers/sdl2_game_window"

