[package]

name = "piston-example-image"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
tags = []

[[bin]]

name = "piston-example-image"
path = "src/main.rs"

[dependencies.pistoncore-sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.pistoncore-event]

git = "https://github.com/pistondevelopers/event"

[dependencies.piston2d-opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

