[package]
name = "piston-example-image"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
keywords = []

[[bin]]
name = "piston-example-image"
path = "src/main.rs"

[dependencies]
piston = "0.1.4"
pistoncore-sdl2_window = "0.1.0"
piston2d-opengl_graphics = "0.1.0"
piston2d-graphics = "0.1.0"
