[package]

name = "piston-example-image_iter"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
tags = []

[[bin]]

name = "piston-example-image_iter"
path = "src/main.rs"

[dependencies.graphics]

git = "https://github.com/pistondevelopers/rust-graphics"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston/"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"

