[package]

name = "music"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
tags = []

[[bin]]

name = "music"
path = "src/main.rs"

[dependencies.sdl2_window]

git = "https://github.com/PistonDevelopers/sdl2_window.git"

[dependencies.opengl_graphics]

git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies.sdl2_mixer]

git = "https://github.com/andelf/rust-sdl2_mixer"
