[package]
name = "piston-example-paint"
version = "0.0.1"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = []

[[bin]]
name = "piston-example-paint"
path = "src/main.rs"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.image]
git = "https://github.com/pistondevelopers/image"
