[package]
name = "piston-example-paint"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = []

[[bin]]
name = "piston-example-paint"
path = "src/main.rs"

[dependencies]
pistoncore-sdl2_window = "0.1.0"
piston = "0.1.4"
piston2d-opengl_graphics = "0.1.0"
piston2d-graphics = "0.1.4"
image = "0.3.10"
