[package]
name = "piston-example-sprite"
version = "0.0.1"
authors = ["Coeuvre Wong <coeuvre@gmail.com>"]
keywords = []

[[bin]]
name = "piston_example_sprite"
path = "src/main.rs"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.piston2d-sprite]
git = "https://github.com/pistondevelopers/sprite"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.piston-ai_behavior]
git = "https://github.com/pistondevelopers/ai_behavior"
