[package]
name = "piston-example-sprite"
version = "0.1.0"
authors = ["Coeuvre Wong <coeuvre@gmail.com>"]
keywords = []

[[bin]]
name = "piston-example-sprite"
path = "src/main.rs"

[dependencies]
pistoncore-sdl2_window = "0.1.0"
piston = "0.1.4"
piston2d-sprite = "0.1.0"
piston2d-graphics = "0.1.3"
piston2d-opengl_graphics = "0.1.0"
piston-ai_behavior = "0.1.0"
