[package]
name = "piston-example-user_input"
version = "0.0.0"
authors = ["Your Name <your@email.com>"]
keywords = []

[[bin]]
name = "piston-example-user_input"
path = "src/main.rs"

[dependencies]
piston = "0.46.0"
piston2d-opengl_graphics = "0.65.0"
piston2d-graphics = "0.32.0"
piston2d-touch_visualizer = "0.19.0"

[dependencies.pistoncore-sdl2_window]
version = "0.60.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.55.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.59.0"
optional = true

[features]
default = ["include_glutin"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]
