[package]
name = "piston-example-freetype"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = []

[[bin]]
name = "piston-example-freetype"
path = "src/main.rs"

[dependencies]
piston = "0.55.0"
piston2d-opengl_graphics = "0.83.0"
piston2d-graphics = "0.44.0"
freetype-rs = "0.34.0"
find_folder = "0.3.0"

[dependencies.pistoncore-sdl2_window]
version = "0.69.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.80.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.72.0"
optional = true

[features]
default = ["include_glfw"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]
