[package]
name = "piston-example-freetype"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = []

[[bin]]
name = "piston-example-freetype"
path = "src/main.rs"

[dependencies]
piston = "1.0.0"
piston2d-opengl_graphics = "0.89.0"
piston2d-graphics = "0.45.0"
find_folder = "0.3.0"

[dependencies.freetype-rs]
version = "0.38.0"
features = ["bundled"]

[dependencies.pistoncore-sdl2_window]
version = "0.71.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.82.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.73.1"
optional = true

[features]
default = ["include_glfw"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]
